<resources>
    <string name="app_name">Event Countdown</string>
    <string name="count_down_time_label">Time to Count Down:</string>
    <string name="high_notify_time_label">Highest Notification:</string>
    <string name="count_down_time_button">Set Count Down</string>
    <string name="event_message_label">Message:</string>
    <string name="start_count_down">Start Count Down</string>
    <string name="count_down_started">Countdown has been started</string>
    <string name="current_countdown_message"> seconds until </string>
    <string name="count_down_ended">Time for: </string>
    <string name="event_update">Event Update</string>
</resources>
